# LangtonsAntPOS

./: CMakeLists.txt  Langtonov Mravec - Dokumentacia.docx  Langtonov Mravec - Pouzivatelska prirucka.docx  Makefile  ant.c  ant.h  client.c  client_definition.c  client_definition.h  client_server_definitions.c  client_server_definitions.h  display.c  display.h  main.c  server.c  server_definition.c  server_definition.h  settings.c  settings.h  structuresEnums.h
txtFiles/: test.txt
